Add slide animation to dashboard

--- a/src/app/components/popup/popup.component.html
+++ b/src/app/components/popup/popup.component.html
@@ -1,5 +1,5 @@
 <div id="popup" class="ol-popup">
   <a href="#" id="popup-closer" class="ol-popup-closer"></a>
   <div id="popup-content"></div>
-  <a href="https://maps.dwd.de/geoserver/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetCapabilities"target="_blank">Show details</a>
+  <button (click)="showDash()">Show details</button>
 </div>
