--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 .map {
-    width: 100%;
-    height: 100vh;
+  height: 100%;
+}
+
+.ol-popup-closer {
+  text-decoration: none;
+  position: absolute;
+  top: 2px;
+  right: 8px;
+}
+  
+.ol-popup-closer:after {
+  content: "✖";
 }
