--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <app-map></app-map>
-<app-dashboard [@slideInOut]="menuState"></app-dashboard>
+<app-dashboard [@slideInOut]="menuState" class="container"></app-dashboard>
