--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,3 @@
-<p>
-  dashboard works!
-</p>
+<app-details></app-details>
+<app-barchart></app-barchart>
 <a href="#" id="popup-closer-dash" class="ol-popup-closer"></a>
