--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,16 +1,17 @@
 <br>
-Facility ID: {{ facilityID }}
-<br>
-Facility name:
-<br>
-Facility type:
-<br>
-Status:
-<br>
-Operator:
-<br>
-Address:
-<br>
-Industry sector description:
-<br>
-Industry sector code:
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 mytable">  
+  <!-- Key Column -->
+  <ng-container matColumnDef="label">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element"> {{ element.key }} </td>
+  </ng-container>
+
+  <!-- Value Column -->
+  <ng-container matColumnDef="contents">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element"> {{ element.value }} </td>
+  </ng-container>
+
+  <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr> -->
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
