Add legend, fix barchart zero issue, refactor styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-map></app-map>
-<app-dashboard [@slideInOut]="dashState" class="container"></app-dashboard>
+<app-dashboard [@dashInOut]="dashState" class="container"></app-dashboard>
+<app-legend *ngIf="legendState"></app-legend>
+<app-legendbtn></app-legendbtn>
