--- a/src/app/components/barchart/barchart.component.html
+++ b/src/app/components/barchart/barchart.component.html
@@ -12,6 +12,7 @@
   [xAxisLabel]="xAxisLabel"
   [yAxisLabel]="yAxisLabel"
   [xAxisTickFormatting]="formatYear"
+  [roundEdges]="roundEdges"
   (select)="onSelect($event)">
 
   <ng-template #tooltipTemplate let-model="model">
