--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -11,5 +11,5 @@
   </p>
 </div>
 <div mat-dialog-actions>
-  <button mat-button color="primary" (click)="onClickClose()">Ok</button>
+  <button mat-button color="primary" (click)="onClickClose()">OK</button>
 </div>
