--- a/src/app/components/barchart/barchart.component.html
+++ b/src/app/components/barchart/barchart.component.html
@@ -1,26 +1,30 @@
-<br>
-<ngx-charts-bar-vertical
-  [view]="view"
-  [scheme]="colorScheme"
-  [results]="data"
-  [gradient]="gradient"
-  [xAxis]="showXAxis"
-  [yAxis]="showYAxis"
-  [legend]="showLegend"
-  [showXAxisLabel]="showXAxisLabel"
-  [showYAxisLabel]="showYAxisLabel"
-  [xAxisLabel]="xAxisLabel"
-  [yAxisLabel]="yAxisLabel"
-  [xAxisTickFormatting]="formatYear"
-  [roundEdges]="roundEdges"
-  (select)="onSelect($event)">
+<mat-card *ngIf="!hasData">
+  <mat-card-content>No data</mat-card-content>
+</mat-card>
+<div class="div__barchart">
+  <ngx-charts-bar-vertical
+    [view]="view"
+    [scheme]="colorScheme"
+    [results]="data"
+    [gradient]="gradient"
+    [xAxis]="showXAxis"
+    [yAxis]="showYAxis"
+    [legend]="showLegend"
+    [showXAxisLabel]="showXAxisLabel"
+    [showYAxisLabel]="showYAxisLabel"
+    [xAxisLabel]="xAxisLabel"
+    [yAxisLabel]="yAxisLabel"
+    [xAxisTickFormatting]="formatYear"
+    [roundEdges]="roundEdges"
+    [noBarWhenZero]="noBarWhenZero"
+    (select)="onSelect($event)">
+    <ng-template #tooltipTemplate let-model="model">
+      <p>
+        <span>{{ model.name }}</span>
+        <br>
+        <span class="tooltip-value">{{ model.value | formatNumber }}</span>      
+      </p>
+    </ng-template>
+  </ngx-charts-bar-vertical>
+</div>
 
-  <ng-template #tooltipTemplate let-model="model">
-    <p>
-      <span>{{ model.name }}</span>
-      <br>
-      <span class="tooltip-value">{{ model.value | formatNumber }}</span>      
-    </p>
-  </ng-template>
-  
-</ngx-charts-bar-vertical>
