--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,16 +1,24 @@
-<br>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 mytable">  
-  <!-- Key Column -->
-  <ng-container matColumnDef="label">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element"> {{ element.key }} </td>
-  </ng-container>
-
-  <!-- Value Column -->
-  <ng-container matColumnDef="contents">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element"> {{ element.value }} </td>
-  </ng-container>
-
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+<div class="div__details">
+  <div class="header__text">{{ fName }}</div>
+  <p><i>{{ fAddress }}</i></p>
+  <table>
+    <tbody>
+      <tr>
+        <td class="table__key">Operator</td>
+        <td class="table__value">{{ fOperator }}</td>
+      </tr>
+      <tr>
+        <td class="table__key">Type</td>
+        <td class="table__value">{{ fType }}</td>
+      </tr>
+      <tr>
+        <td class="table__key">Status</td>
+        <td class="table__value">{{ fStatus }}</td>
+      </tr>
+      <tr>
+        <td class="table__key">Classification</td>
+        <td class="table__value">{{ fClassification }}</td>
+      </tr>
+    </tbody>
+  </table>  
+</div>
