Add intro button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <app-dashboard [@dashInOut]="dashState" class="container"></app-dashboard>
 <app-legendbtn></app-legendbtn>
 <app-legend *ngIf="legendState"></app-legend>
+<app-introbtn></app-introbtn>
