--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -2,12 +2,13 @@
 <div mat-dialog-content>
   <p>
     The <a href="https://www.gesetze-im-internet.de/tehg_2011/" target="_blank">Treibhausgas-Emissionshandelsgesetz (TEHG)</a> 
-    lays the foundations for the European Union <a href="https://ec.europa.eu/clima/policies/ets_en" target="_blank">Emissions Trading System (EU ETS)</a> 
-    and requires that certain facilities (such as factories and power stations) are registered and provide reports on their emissions. This demo shows the 
-    registered facilities in Berlin and their emissions from 2005 – 2017. 
+    lays the foundations in Germany law for an emissions trading system as directed by the 
+    <a href="https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX%3A32003L0087" target="_blank">EU Emissions Trading Directive (Directive 2003/87/EC)</a>
+    and requires that certain facilities (such as factories and power stations) are registered and provide annual reports on their emissions.
   </p>
   <p>
-    Values are given in <a href="https://ec.europa.eu/eurostat/statistics-explained/index.php/Glossary:Carbon_dioxide_equivalent" target="_blank">CO2-equivalent emissions</a>.
+    This demo shows the registered facilities in Berlin and their emissions from 2005 – 2017. 
+    Values are given as <a href="https://ec.europa.eu/eurostat/statistics-explained/index.php/Glossary:Carbon_dioxide_equivalent" target="_blank">CO2-equivalent emissions</a>.
   </p>
 </div>
 <div mat-dialog-actions>
