--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,13 +1,5 @@
-<table>
-  <tbody>
-    <tr>
-      <td class="dash__details">
-        <app-details></app-details>
-      </td>
-      <td class="dash__barchart">
-        <app-barchart></app-barchart>
-      </td>
-    </tr>
-  </tbody>
-</table> 
+<div class="flex-container">
+  <app-details></app-details>
+  <app-barchart></app-barchart>
+</div>
 <a href="#" id="popup-closer-dash" class="ol-popup-closer"></a>
